# rs-depcheck

./: Cargo.toml  README.md  out.txt  test.vue
src/: main.rs  package_json_reader.rs  parser.rs  vue_parse.rs
src/js/: analyze_project.rs  js_parser.rs  mod.rs
src/parser/: js.rs  mod.rs  svelte.rs  ts.rs  vue.rs
src/vue/: analyze_vue.rs  lexer.rs  mod.rs  parser.rs
