[package]
name = "dcrs"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "vue"
path = "src/vue_parse.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
oxc = { version = "0.72.3", features = ["full"] }
regex = "1.11.1"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
